<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="backButtonSettings"
        android:widgetLayout="@layout/back_button_layout"/>

    <PreferenceCategory
        android:title="Display">

        <SwitchPreference
            android:key="pref_dark_mode"
            android:title="Dark Mode"
            android:summary="Enables Dark Mode across the entire App"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Account">

        <Preference
            android:title="Username"
            android:key="Logout"
            android:widgetLayout="@layout/logout_button_layout">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Region">

        <ListPreference
            android:key="@string/region_select"
            android:title="Region"
            android:summary="Select the region the app will run in"
            android:entries="@array/region_entries"
            android:entryValues="@array/region_values"
            android:defaultValue="united_kingdom"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Location">

        <EditTextPreference
            android:key="default_location"
            android:title="@string/pref_default_location_title"
            android:summary="@string/pref_default_location_summary"></EditTextPreference>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="Price">

<!--        <EditTextPreference-->
<!--            android:key="default_price"-->
<!--            android:title="Price Preferences"-->
<!--            android:summary="Set upper bound for how much the gallery entrance can cost" />-->
<!--        <SeekBarPreference-->
<!--            android:key="default_price"-->
<!--            android:title="Price Preferences"-->
<!--            android:summary="@string/price_summ"-->
<!--            android:defaultValue="@integer/seek_bar_default"-->
<!--            android:max="@integer/seek_bar_max"-->
<!--            android:min="@integer/seek_bar_min" />-->
        <SeekBarPreference
            android:key="@string/default_price"
            android:title="Price Preferences"
            android:summary="Set upper bound for how much the gallery entrance can cost"
            android:max="10"
            android:defaultValue="10" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Style">

        <ListPreference
            android:key="style_select"
            android:title="Style Preference"
            android:summary="Select the style for gallery recommendations"
            android:entries="@array/style_entries"
            android:entryValues="@array/style_values"
            android:defaultValue="Undecided"/>


    </PreferenceCategory>


</PreferenceScreen>