<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/style1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:id="@+id/fb_name1"
                android:text="@string/feedback_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/fb_text1"
                android:text="@string/fb1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qs_img_not_found"
                android:id="@+id/fb_img1_1"
                android:src="@drawable/ic_launcher_foreground" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qs_img_not_found"
                android:id="@+id/fb_img1_2"
                android:src="@drawable/ic_launcher_foreground" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/style2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:id="@+id/fb_name2"
                android:text="@string/feedback_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/fb_text2"
                android:text="@string/fb1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qs_img_not_found"
                android:id="@+id/fb_img2_1"
                android:src="@drawable/ic_launcher_foreground" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qs_img_not_found"
                android:id="@+id/fb_img2_2"
                android:src="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/style3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:id="@+id/fb_name3"
                android:text="@string/feedback_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/fb_text3"
                android:text="@string/fb1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qs_img_not_found"
                android:id="@+id/fb_img3_1"
                android:src="@drawable/ic_launcher_foreground" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qs_img_not_found"
                android:id="@+id/fb_img3_2"
                android:src="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/no_genre_text"
            android:text="@string/no_genre_found"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/fb_btn_retake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="RETAKE QUESTIONNAIRE" />
        <Button
            android:id="@+id/fb_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/next"/>
    </LinearLayout>

</ScrollView>